--- a/index.css
+++ b/index.css
@@ -227,7 +227,7 @@ input{
 .footer{
     width: 100%;
     background-color: #172337;
-    color: white;
+    color: rgb(150, 93, 93);
     display: flex;
     padding: 0px 20%;
     justify-content: space-around;
